--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -11,7 +11,7 @@
         padding-top: 0;
         padding-bottom: 0;
 
-        @media all and (min-width: 640px) {
+        @media all and (min-width: 680px) {
             justify-content: space-between;
         }
     }
