--- a/src/assets/scss/components/navigation.scss
+++ b/src/assets/scss/components/navigation.scss
@@ -10,14 +10,16 @@
         font-size: var(--step-1);
         margin-top: 1rem;
 
-        @media all and (min-width: 768px) {
+        @media all and (min-width: 680px) {
             font-size: var(--step-0);
+            margin-top: 0;
+            align-items: center;
         }
 
         &[data-open="false"] {
             display: none;
 
-            @media all and (min-width: 640px) {
+            @media all and (min-width: 680px) {
                 display: flex;
             }
         }
@@ -25,7 +27,7 @@
         &[data-open="true"] {
             display: block;
 
-            @media all and (min-width: 640px) {
+            @media all and (min-width: 680px) {
                 display: flex;
             }
         }
@@ -62,7 +64,7 @@
     margin-left: .5rem;
     margin-right: -10px;
 
-    @media all and (min-width: 640px) {
+    @media all and (min-width: 680px) {
         display: none;
     }
 
@@ -94,10 +96,12 @@
         #ham-middle {
             opacity: 0;
         }
+
         #ham-top {
 
             transform: rotate(41deg);
         }
+
         #ham-bottom {
             transform: rotate(-41deg);
         }
@@ -106,7 +110,7 @@
 
 
 
-@media all and (min-width: 640px) {
+@media all and (min-width: 680px) {
     .site-nav {
         flex-direction: row;
         grid-column: auto;
@@ -116,7 +120,13 @@
             display: flex;
             gap: 2rem;
             font-size: var(--step-0);
+
+            li {
+                margin-bottom: 0;
+            }
         }
+
+
 
         .flexer {
             order: 1;
